- Added voice chat toggler
- Settings are now split between plugin configurations